fixing jupyter notebook on mobile

--- a/themes/ghostdance/assets/css/ipynb-custom.css
+++ b/themes/ghostdance/assets/css/ipynb-custom.css
@@ -14,5 +14,6 @@ div#notebook {
 
 	div.output_subarea {
 		flex: none !important;
+		min-width: 100%;
 	}
 }
